--- a/style/main.css
+++ b/style/main.css
@@ -309,65 +309,94 @@ hr {
     text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size: 55px; }
+    font-size: 0px; }
   .tile.tile-2 .tile-inner {
-    background: #eee4da;
+    background-image: url('0002.png');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+	@media screen and (max-width: 520px) {
+      .tile.tile-2 .tile-inner {
+        background-image: url('0002k.png'); 
+		font-size: 0px; } }
   .tile.tile-4 .tile-inner {
-    background: #ede0c8;
+    background-image: url('0004.png');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
+	@media screen and (max-width: 520px) {
+      .tile.tile-4 .tile-inner {
+        background-image: url('0004k.png'); 
+		font-size: 0px; } }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
-    background: #f2b179; }
+    background-image: url('0008.png'); }
+	@media screen and (max-width: 520px) {
+      .tile.tile-8 .tile-inner {
+        background-image: url('0008k.png'); 
+		font-size: 0px; } }
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
-    background: #f59563; }
+    background-image: url('0016.png'); }
+	@media screen and (max-width: 520px) {
+      .tile.tile-16 .tile-inner {
+        background-image: url('0016k.png'); 
+		font-size: 0px; } }
   .tile.tile-32 .tile-inner {
     color: #f9f6f2;
-    background: #f67c5f; }
+    background-image: url('0032.png'); }
+	@media screen and (max-width: 520px) {
+      .tile.tile-32 .tile-inner {
+        background-image: url('0032k.png'); 
+		font-size: 0px; } }
   .tile.tile-64 .tile-inner {
     color: #f9f6f2;
-    background: #f65e3b; }
+    background-image: url('0064.png'); }
+	@media screen and (max-width: 520px) {
+      .tile.tile-64 .tile-inner {
+        background-image: url('0064k.png'); 
+		font-size: 0px; } }
   .tile.tile-128 .tile-inner {
     color: #f9f6f2;
-    background: #edcf72;
+    background-image: url('0128.png');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
-    font-size: 45px; }
+    font-size: 0px; }
     @media screen and (max-width: 520px) {
       .tile.tile-128 .tile-inner {
-        font-size: 25px; } }
+		background-image: url('0128k.png'); 
+        font-size: 0px; } }
   .tile.tile-256 .tile-inner {
     color: #f9f6f2;
-    background: #edcc61;
+    background-image: url('0256.png');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
-    font-size: 45px; }
+    font-size: 0px; }
     @media screen and (max-width: 520px) {
       .tile.tile-256 .tile-inner {
-        font-size: 25px; } }
+		background-image: url('0256k.png'); 
+        font-size: 0px; } }
   .tile.tile-512 .tile-inner {
     color: #f9f6f2;
-    background: #edc850;
+    background-image: url('0512.png');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
-    font-size: 45px; }
+    font-size: 0px; }
     @media screen and (max-width: 520px) {
       .tile.tile-512 .tile-inner {
-        font-size: 25px; } }
+		background-image: url('0512k.png'); 
+        font-size: 0px; } }
   .tile.tile-1024 .tile-inner {
     color: #f9f6f2;
-    background: #edc53f;
+    background-image: url('1024.png');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
-    font-size: 35px; }
+    font-size: 0px; }
     @media screen and (max-width: 520px) {
       .tile.tile-1024 .tile-inner {
-        font-size: 15px; } }
+		background-image: url('1024k.png'); 
+        font-size: 0px; } }
   .tile.tile-2048 .tile-inner {
     color: #f9f6f2;
-    background: #edc22e;
+    background-image: url('2048.png');
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
-    font-size: 35px; }
+    font-size: 0px; }
     @media screen and (max-width: 520px) {
       .tile.tile-2048 .tile-inner {
-        font-size: 15px; } }
+		background-image: url('2048k.png'); 
+        font-size: 0px; } }
   .tile.tile-super .tile-inner {
     color: #f9f6f2;
     background: #3c3a32;
